[gd_scene load_steps=2 format=3 uid="uid://b3xira40amfmf"]

[ext_resource type="Script" path="res://directory.gd" id="1_8wphu"]

[node name="Directory" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8wphu")

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 120.0
offset_bottom = 73.0
text = "Back"

[node name="level1" type="Button" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 154.0
offset_right = 192.0
offset_bottom = 209.0
text = "1"

[node name="level2" type="Button" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 150.0
offset_right = 369.0
offset_bottom = 211.0
text = "2
"

[connection signal="pressed" from="back" to="." method="_on_button_pressed"]
[connection signal="pressed" from="level1" to="." method="_on__pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
